--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,12 +1,20 @@
 # Skills
 # Organizational leadership
-- skill: Organizational leadership
-  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
+#- skill: Organizational leadership
+#  description: I have several years of experience leading organziations from community groups to business departments. From public speaking, to mentoring, to coordination of people and events, I can lead in any context.
 
 # Communications strategy
-- skill: Communications strategy
-  description: Content and marketing strategy,
+#- skill: Communications strategy
+#  description: Content and marketing strategy,
 
 # Digital content development and creation
-- skill: Digital content development and creation
-  description: Copy writing, graphic design, web design, front-end web development, print design
+#- skill: Digital content development and creation
+#  description: Copy writing, graphic design, web design, front-end web development, print design
+
+# Digital content development and creation
+- skill: Python and R programming coding
+#  description: Copy writing, graphic design, web design, front-end web development, print design
+
+- skill: Linux command line operation
+
+- skill: molecular model visualization software Chimera operation
