--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -17,4 +17,4 @@
 
 - skill: Linux command line operation
 
-- skill: molecular model visualization software Chimera operation
+- skill: Molecular model visualization software Chimera operation
