--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ resume_title:                   "Bioinformatics master student in CUHK-SZ"
 #resume_header_contact_info:     "742 Evergreen Terrace, Springfield • 555-7334 • lisasimpson@youremailaddress.com"
 #display_header_contact_info:    "false"
 
-resume_header_intro: "<p>I want to do scientific research in the interdisciplinary fields of biomedicine and deep learning, also I want to try some mathematical stuff. One of my current interests is deep learning-based molecular docking methods. Some keywords I encounter so far: graph neural network, transformer with attention mechanism, diffusion generative model.</p>"
+resume_header_intro: "<p>I want to do scientific research in the interdisciplinary fields of biomedicine and deep learning, also I want to try some mathematical stuff. One of my current interests is deep learning-based molecular docking methods. Some keywords I encounter so far: graph neural network, transformer with attention mechanism, diffusion generative model. (Updated on 2024-08-12)</p>"
 
 # use "yes" to display the email contact button,
 # "no" to display an "I'm not looking for work" message,
