update experience in CUHK-SZ

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,7 +2,8 @@
 - company: Chinese University of Hong Kong, Shenzhen (Shenzhen, China)
   position: Bioinformatics master student (full time)
   duration: September, 2023 -- Present
-  summary: I have taken courses such as "Theories and Algorithms in Bioinformatics", "Statistical Methods for Biomedical Research", "Machine Learning for Biomedical Research", "Computational Molecular Modeling and Design", and so on. Besides, I have been running a short research project about "deep learning-based molecular docking tools" under supervision of Prof. Hajime Hirao.
+  summary: I am taking the master programme of bioinformatics launched by School of Medicine and School of Data Science in CUHK-SZ. I have taken courses such as "Theories and Algorithms in Bioinformatics", "Statistical Methods for Biomedical Research", "Machine Learning for Biomedical Research", "Computational Molecular Modeling and Design", and so on. Besides, I have been running a short research project about “Investigation on recent deep learning-based molecular docking tools" under supervision of Prof. Hajime Hirao in Warshel Institute for Computational Biology in CUHK-SZ.
+
 
 - company: Roc Rock Biotechnology Company (Shenzhen, China)
   position: Member of bioinformatics team and clinical affairs team
